--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Watch_Shop</title>
    <link rel="icon" href="https://sdmntprwestus.oaiusercontent.com/files/00000000-7c68-6230-a1b2-059d22c08b25/raw?se=2025-08-27T18%3A51%3A27Z&sp=r&sv=2024-08-04&sr=b&scid=4df22f8a-d7b6-56bf-a08d-08d462a0bb9e&skoid=1e6af1bf-6b08-4a04-8919-15773e7e7024&sktid=a48cca56-e6da-484e-a814-9c849652bcb3&skt=2025-08-27T17%3A36%3A32Z&ske=2025-08-28T17%3A36%3A32Z&sks=b&skv=2024-08-04&sig=uzlToFqBEuOFLsgzwtgSWFqk97hGwXd/09eQNm16dME%3D" type="image/x-icon">
+   <link rel="stylesheet" href="/Clones/Watch_shop/styles.css" type="text/css"/>
 </head>
 <body>
 
